# stm32h7-try

./: Cargo.toml  README.md  justfile  memory.x  rust-toolchain
probe-debug/: Cargo.toml
probe-debug/src/: main.rs
src/: main.rs
stm32h7-try/: Cargo.toml  memory.x
stm32h7-try/.cargo/: config.toml
stm32h7-try/src/: main.rs
